--- a/app/src/main/res/layout/activity_visualization.xml
+++ b/app/src/main/res/layout/activity_visualization.xml
@@ -68,8 +68,8 @@
                     android:id="@+id/txtsexo2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="72dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="76dp"
                     android:textColor="#000000"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/txtSexo"
@@ -106,7 +106,7 @@
                     android:id="@+id/txtpatrono2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="112dp"
                     android:textColor="#000000"
                     android:textSize="14sp"
@@ -131,8 +131,8 @@
                     android:id="@+id/txtbirthday2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="148dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="152dp"
                     android:textColor="#000000"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/txtbirthday"
@@ -179,7 +179,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.815"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <ImageButton
             android:id="@+id/btnCuriosity"
