Custom View and Widget start

--- a/app/src/main/res/layout/activity_lumus.xml
+++ b/app/src/main/res/layout/activity_lumus.xml
@@ -69,4 +69,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.955" />
+
+    <ImageView
+        android:id="@+id/imgExplosion"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_marginBottom="20dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/txtShake"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/explosion" />
 </androidx.constraintlayout.widget.ConstraintLayout>
