--- a/app/src/main/res/layout/activity_lumus.xml
+++ b/app/src/main/res/layout/activity_lumus.xml
@@ -11,8 +11,8 @@
         android:id="@+id/btnSpell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="Start"
-        android:text="@string/lumus"
+        android:onClick="Spell"
+        android:text="@string/lumus_lumus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,20 +55,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtShake" />
-
-    <Button
-        android:id="@+id/btnStop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="Stop"
-        android:text="@string/lumus_stop"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.974"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.955" />
 
     <ImageView
         android:id="@+id/imgExplosion"
