--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="120dp"
+    android:layout_height="50dp"
+    android:background="@color/ic_launcher_background">
 
-    <ImageView android:id="@+id/imgWidget"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/imageView3"
+        android:background="@drawable/logo2"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/explosion"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="33dp" />
-
+        android:layout_width="match_parent">
+    </FrameLayout>
 </LinearLayout>
