--- a/app/src/main/res/xml/widget_rg_info.xml
+++ b/app/src/main/res/xml/widget_rg_info.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="120dp"
+    android:minHeight="50dp"
     android:updatePeriodMillis="86400000"
     android:previewImage="@drawable/ic_launcher_foreground"
     android:initialLayout="@layout/widget_layout"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:widgetCategory="home_screen">
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</appwidget-provider>
