--- a/app/src/main/res/layout/activity_spell.xml
+++ b/app/src/main/res/layout/activity_spell.xml
@@ -2,18 +2,60 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/spellContentConstraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SpellActivity">
+    tools:context=".SpellActivity"
+    tools:layout_editor_absoluteX="-1dp"
+    tools:layout_editor_absoluteY="40dp">
 
 
     <com.beserrovsky.rgpotter.util.SpellFeedbackView
         android:id="@+id/spellFeedbackView"
-        android:layout_width="241dp"
-        android:layout_height="19dp"
-        android:onClick="ClickSpell"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="RunSpell"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/spellDescTextView"
+        android:layout_width="334dp"
+        android:layout_height="146dp"
+        android:layout_marginTop="32dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spellDescTitleTextView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="@tools:sample/lorem/random" />
+
+    <TextView
+        android:id="@+id/spellNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/spellFeedbackView"
+        app:layout_constraintEnd_toEndOf="@+id/spellFeedbackView"
+        app:layout_constraintStart_toStartOf="@+id/spellFeedbackView"
+        app:layout_constraintTop_toTopOf="@+id/spellFeedbackView"
+        tools:text="@tools:sample/cities" />
+
+    <TextView
+        android:id="@+id/spellDescTitleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spellFeedbackView"
+        tools:text="@tools:sample/cities[0]" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
